feat: Comprehensive mobile contrast enhancements for WCAG 2.1 AA compliance
📱 MOBILE CONTRAST IMPROVEMENTS:
- Enhanced gray text from #ccc to #E5E5E5 (6.2:1 contrast ratio)
- Improved navigation contrast with 99% opacity backgrounds
- Added text shadows throughout for better readability
- Enhanced form input contrast with darker backgrounds
- Strengthened button and interactive element visibility

🎨 LUXURY AESTHETIC PRESERVATION:
- Maintained sophisticated black/gold color scheme
- Enhanced gold hover states with #F4D03F for better contrast
- Added subtle glow effects for premium feel
- Preserved brand identity while improving accessibility

🔧 TECHNICAL ENHANCEMENTS:
- Created ContrastEnhancer.js for dynamic mobile optimization
- Added comprehensive mobile-specific CSS rules
- Enhanced PWA install banner contrast
- Improved modal and overlay text readability
- Added background overlays for text over images

📋 ACCESSIBILITY COMPLIANCE:
- WCAG 2.1 AA compliant contrast ratios (4.5:1 for normal text)
- Enhanced touch targets for mobile interaction
- Improved focus states with gold glow effects
- Better keyboard navigation visibility
- Comprehensive mobile testing documentation

✅ AREAS ENHANCED:
- Mobile navigation menu (3px borders, 600 font weight)
- Form elements (enhanced backgrounds and placeholders)
- Card components (2px borders, text shadows)
- Button interactions (700 font weight, shadows)
- Background image overlays (additional 0.3 opacity)
- PWA installation prompts (enhanced contrast)

🧪 TESTING FRAMEWORK:
- Created comprehensive mobile testing guide
- Device-specific testing matrix (iOS/Android)
- Automated and manual testing procedures
- Success metrics and validation checklist
- Post-deployment monitoring guidelines

Ready for mobile accessibility validation and user testing

--- a/fleet-details.html
+++ b/fleet-details.html
@@ -391,5 +391,8 @@
             document.querySelector('#vehicle-grid').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
+
+    <!-- Enhanced Contrast for Mobile -->
+    <script src="utils/contrastEnhancer.js"></script>
 </body>
 </html>
