--- a/property-details.html
+++ b/property-details.html
@@ -439,5 +439,8 @@
             document.querySelector('#property-grid').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
+
+    <!-- Enhanced Contrast for Mobile -->
+    <script src="utils/contrastEnhancer.js"></script>
 </body>
 </html>
