--- a/index.html
+++ b/index.html
@@ -2431,6 +2431,10 @@
     <script src="utils/accessibilityEnhancer.js"></script>
     <script src="utils/formValidator.js"></script>
 
+    <!-- PWA Enhancement Scripts -->
+    <script src="utils/offlineManager.js"></script>
+    <script src="utils/pushNotifications.js"></script>
+
     <!-- Core Functionality Scripts (Deferred for Performance) -->
     <script src="utils/imageManager.js" defer></script>
     <script src="utils/pwaManager.js" defer></script>
